--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "electron .",
     "build": "electron-builder"
   },
-  "author": "imnotkoolkid",
+  "author": "imnotkoolkid , akuma",
   "license": "MIT",
   "devDependencies": {
     "electron": "^28.1.0",
