--- a/default_settings.json
+++ b/default_settings.json
@@ -11,9 +11,8 @@
   "saturation": "1",
   "grayscale": "0",
   "hue": "0",
-  "invert": false,
   "sepia": "0",
-  "startupBehaviour": "windowed",
+  "startupBehaviour": "maximized",
   "kchCSS": "",
   "kchCSSTitle": "",
   "opacity": "100",
