--- a/default_settings.json
+++ b/default_settings.json
@@ -29,5 +29,7 @@
     }
   ],
   "openingAnimations": false,
-"noHurtCam": false
+  "hurtCamMode": "default",
+  "killicon": "",
+  "hitmark": ""
 }
